<resources>
    <string name="app_name">drinkteawithme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">{description}</string>
    <string name="nav_header_title">{username}</string>

    <string name="menu_profile">profile</string>
    <string name="menu_settings">settings</string>
    <string name="menu_history">history</string>
    <string name="menu_friends">friends</string>
    <string name="menu_home">home</string>
    <string name="menu_share">share</string>
    <string name="menu_logout">logout</string>

    <string name="fcm_msg">fcmmsg</string>
    <string name="fcm_channel_id">teawthme</string>

    <string name="dont_have_an_account">don\'t have an account?</string>
    <string name="im_drinking_tea">i\'m drinking tea</string>

    <string name="saved_settings">saved settings</string>
    <string name="tea_time">tea time</string>
    <string name="username">username</string>
    <string name="set">set</string>
    <string name="add">add</string>
    <string name="last_session">last session was</string>
    <string name="you_had">you had </string>
    <string name="at"></string>
    <string name="sessions">sessions</string>
    <string name="session">session</string>
    <string name="never_documented">never documented</string>
    <string name="last_online">zuletzt online</string>
    <string name="minutes">minutes</string>
    <string name="info">info</string>
    <string name="statistics">statistics</string>
    <string name="name">name</string>
    <string name="volume">volume</string>
    <string name="liter">liter</string>
    <string name="do_you_really_want_to_leave">do you really wannt to leave?</string>
    <string name="you_are_about_to_leave_the_app">you are about to leave the app</string>
    <string name="i_hope_you_are_your_own_friend">i hope you are your own friend</string>
    <string name="invite_someone">invite someone</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="known_unknowns">known unknowns</string>
    <string name="email">email</string>
</resources>
