<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/usernameLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLabel"
        android:layout_alignStart="@id/usernameLabel"
        android:text="@string/email" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/emailLabel"
        android:layout_alignEnd="@id/username" />

    <TextView
        android:id="@+id/sessionCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLabel"
        android:layout_alignStart="@id/emailLabel"
        android:layout_marginTop="8dp"
        android:text="@string/sessions" />

    <TextView
        android:id="@+id/sessionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/sessionCountLabel"
        android:layout_alignEnd="@id/username" />

    <TextView
        android:id="@+id/friendCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sessionCountLabel"
        android:layout_alignStart="@id/usernameLabel"
        android:text="@string/menu_friends" />

    <TextView
        android:id="@+id/friendCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/friendCountLabel"
        android:layout_alignEnd="@id/username" />

</RelativeLayout>